--- a/Index.html
+++ b/Index.html
@@ -4,6 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frontend Task</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        img {
+            max-width: 150px;
+            border-radius: 50%;
+        }
+    </style>
 </head>
 <body>
     <!-- Slack Name -->
@@ -22,7 +33,7 @@
     <p data-testid="myTrack">Frontend</p>
 
     <!-- GitHub URL -->
-    <a href="https://github.com/tobby8629" data-testid="githubURL">GitHub</a>
+    <a href="https://github.com/Tobby8629/HNG-Task1" data-testid="githubURL">GitHub Repo</a>
 
     <script src="script.js"></script>
 </body>
