--- a/Index.html
+++ b/Index.html
@@ -32,7 +32,7 @@
     <!-- Track -->
     <p data-testid="myTrack">Frontend</p>
 
-    <!-- GitHub URL -->
+    <!-- gitHub URL -->
     <a href="https://github.com/Tobby8629/HNG-Task1" data-testid="githubURL">GitHub Repo</a>
 
     <script src="script.js"></script>
