--- a/index.html
+++ b/index.html
@@ -1,1 +1,40 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Frontend Task</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding: 20px;
+        }
+        img {
+            max-width: 150px;
+            border-radius: 50%;
+        }
+    </style>
+</head>
+<body>
+    <!-- Slack Name -->
+    <h1 data-testid="slackUserName">Popoola samuel</h1>
 
+    <!-- Slack Display Picture -->
+    <img src="assets/sam.jpg" alt="Your Slack Username" data-testid="slackDisplayImage">
+
+    <!-- Current Day of the Week -->
+    <p data-testid="currentDayOfTheWeek"></p>
+
+    <!-- Current UTC Time -->
+    <p data-testid="currentUTCTime"></p>
+
+    <!-- Track -->
+    <p data-testid="myTrack">Frontend</p>
+
+    <!-- gitHub URL -->
+    <a href="https://github.com/Tobby8629/HNG-Task1" data-testid="githubURL">GitHub Repo</a>
+
+    <script src="script.js"></script>
+</body>
+</html>
